--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,14 @@ services:
       - gestao-network
     depends_on:
       - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: gestao_alunos
+      DB_USERNAME: root
+      DB_PASSWORD: root
+    entrypoint: ["/usr/local/bin/entrypoint.sh"]
+    command: ["php-fpm"]
 
   web:
     image: nginx:alpine
