--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,22 +1,36 @@
 FROM php:8.2-fpm
 
-# Instala dependências do sistema
+# dependências do sistema
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
     libjpeg62-turbo-dev \
     libfreetype6-dev \
-    locales \
-    zip \
-    jpegoptim optipng pngquant gifsicle \
-    vim unzip git curl \
     libonig-dev \
     libxml2-dev \
     libzip-dev \
-    libmcrypt-dev \
-    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
-
-# Instala o Composer
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+    zip \
+    unzip \
+    curl \
+    git \
+    vim \
+    locales \
+    jpegoptim optipng pngquant gifsicle \
+    && docker-php-ext-install \
+        pdo_mysql \
+        mbstring \
+        exif \
+        pcntl \
+        bcmath \
+        gd \
+        zip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /var/www
+
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
