--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -30,7 +30,13 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /var/www
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-
+RUN chown -R www-data:www-data storage bootstrap/cache
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
+RUN echo "Copiando script de entrada..."
+COPY entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT ["entrypoint.sh"]
