--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,6 @@ services:
       - gestao-network
     depends_on:
       - db
-    environment:
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_DATABASE: gestao_alunos
-      DB_USERNAME: root
-      DB_PASSWORD: root
-    entrypoint: ["/bin/sh", "/var/www/entrypoint.sh"]
-
-
 
   web:
     image: nginx:alpine
@@ -40,8 +31,11 @@ services:
     image: mysql:5.7
     container_name: gestao-alunos-db
     environment:
-      MYSQL_DATABASE: gestao_alunos
-      MYSQL_ROOT_PASSWORD: root
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: '${DB_DATABASE}'
+      DB_USERNAME: '${DB_USERNAME}'
+      DB_PASSWORD: '${DB_PASSWORD}'
     ports:
       - "3307:3306"
     volumes:
