--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,16 +26,12 @@ services:
       - app
     networks:
       - gestao-network
-
   db:
     image: mysql:5.7
     container_name: gestao-alunos-db
     environment:
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_DATABASE: '${DB_DATABASE}'
-      DB_USERNAME: '${DB_USERNAME}'
-      DB_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_DATABASE: gestao_alunos
+      MYSQL_ROOT_PASSWORD: root
     ports:
       - "3307:3306"
     volumes:
