correção docker-compose

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.2-fpm
 
-# dependências do sistema
+# dependências
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
@@ -29,13 +29,12 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /var/www
 
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-RUN echo "Copiando script de entrada..."
-COPY entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/entrypoint.sh
 EXPOSE 9000
 CMD ["php-fpm"]
