--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -16,18 +16,29 @@ RUN apt-get update && apt-get install -y \
     vim \
     locales \
     jpegoptim optipng pngquant gifsicle \
-    && docker-php-ext-install \
-        pdo_mysql \
-        mbstring \
-        exif \
-        pcntl \
-        bcmath \
-        gd \
-        zip \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+ && docker-php-ext-install \
+    pdo_mysql \
+    mbstring \
+    exif \
+    pcntl \
+    bcmath \
+    gd \
+    zip \
+ && apt-get clean \
+ && rm -rf /var/lib/apt/lists/* \
+ && mkdir -p /var/www/gestao_alunos/storage/framework/views \
+    /var/www/gestao_alunos/storage/framework/sessions \
+    /var/www/gestao_alunos/storage/framework/cache/data \
+    /var/www/gestao_alunos/storage/logs \
+    /var/www/gestao_alunos/bootstrap/cache \
+ && touch /var/www/gestao_alunos/storage/logs/laravel.log \
+ && chown -R www-data:www-data /var/www/gestao_alunos/storage \
+    /var/www/gestao_alunos/bootstrap/cache \
+ && chmod -R 775 /var/www/gestao_alunos/storage \
+    /var/www/gestao_alunos/bootstrap/cache
 
 WORKDIR /var/www
+
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
