--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -35,12 +35,11 @@ RUN apt-get update && apt-get install -y \
  && chown -R www-data:www-data /var/www/gestao_alunos/storage \
     /var/www/gestao_alunos/bootstrap/cache \
  && chmod -R 775 /var/www/gestao_alunos/storage \
-    chmod -R 775 /var/www/storage/logs \
-    /var/www/gestao_alunos/storage/framework/views \
-    /var/www/gestao_alunos/bootstrap/cache
+    && chmod -R 775 /var/www/gestao_alunos/storage/logs \
+    && chmod -R 775 /var/www/gestao_alunos/storage/framework/views \
+    && chmod -R 775 /var/www/gestao_alunos/bootstrap/cache
 
 WORKDIR /var/www
-
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
